--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -39,27 +39,28 @@
       "FinalDir":"文件目录",
       "FinalFileName":"文件名"      
     },
-    "Tasks":{
-      "Title":"下载任务",
-      "AddTask":"添加下载任务",      
+    "Tasks": {
+      "Title": "下载任务",
+      "AddTask": "添加下载任务",
       "AddTaskThreadCount": "最大线程数",
       "AddTaskRetryCount": "重试次数",
       "AddTaskUrl": "下载任务链接",
       "AddTaskUrlHint": "例如:https://missav.com/fr/cus-1468",
-      "DeleteTask":"删除下载任务",
+      "DeleteTask": "删除下载任务",
       "StopTask": "停止下载任务",
       "ViewDetail": "查看任务详情",
-      "Failed":"下载失败",
-      "Message":{
-        "AddTaskSuccess":"添加下载任务'{0}'成功",
-        "AddTaskFailed":"添加下载任务'{0}'失败,原因'{1}'",
-        "DeleteTaskSuccess":"删除下载任务'{0}'成功",
-        "DeleteTaskFailed":"删除下载任务'{0}'失败"
+      "Failed": "下载失败",
+      "ExtractingMedia": "正在从'{0}'提取媒体信息",
+      "Message": {
+        "AddTaskSuccess": "添加下载任务'{0}'成功",
+        "AddTaskFailed": "添加下载任务'{0}'失败,原因'{1}'",
+        "DeleteTaskSuccess": "删除下载任务'{0}'成功",
+        "DeleteTaskFailed": "删除下载任务'{0}'失败"
       },
-      "FailedReason":{
-        "NoExtrator":"未找到适用于 '{0}' 的提取器",
-        "NoDownloader":"未找到适用于'{0}' 的下载器",
-        "GetDownloadItemFailed":"无法从'{0}'中提取可下载的媒体"
+      "FailedReason": {
+        "NoExtrator": "未找到适用于 '{0}' 的提取器",
+        "NoDownloader": "未找到适用于'{0}' 的下载器",
+        "GetDownloadItemFailed": "无法从'{0}'中提取可下载的媒体"
       }
     },
       "Tags":{
@@ -81,6 +82,9 @@
   },
   "Settings": {
     "Title": "设置",
+    "Common": {
+      "SaveSuccess": "保存配置成功"
+    },
     "System": {
       "Title": "系统设置",
       "Scaning": {
@@ -100,15 +104,15 @@
       "Provider": {
         "Title": "Provider配置"
       },
-      "Proxy":{
+      "Proxy": {
         "Title": "代理设置",
-        "Default":{
+        "Default": {
           "Title": "默认代理",
-          "PlaceHolder":"请输入代理地址,如 http://127.0.0.1"
+          "PlaceHolder": "请输入代理地址,如 http://127.0.0.1"
         },
-        "Download":{
+        "Download": {
           "Title": "下载器专用代理",
-          "PlaceHolder":"请输入代理地址,如 http://127.0.0.1"
+          "PlaceHolder": "请输入代理地址,如 http://127.0.0.1"
         }
       }
     },
@@ -119,16 +123,16 @@
       "Title": "插件设置",
       "InstalledPlugin": {
         "Title": "我的插件",
-        "EnablePlugins":"启用插件",
-        "DisablePlugins":"禁用插件",
-        "DeletePlugins":"删除插件",
-        "Message":{
-          "EnablePluginsSuccess":"启用插件'{0}'成功",
-          "EnablePluginsFailed":"启用插件'{0}'失败",
-          "DisablePluginsSuccess":"禁用插件'{0}'成功",
-          "DisablePluginsFailed":"禁用插件'{0}'失败",
-          "DeletePluginsSuccess":"删除插件'{0}'成功",
-          "DeletePluginsFailed":"删除插件'{0}'失败"
+        "EnablePlugins": "启用插件",
+        "DisablePlugins": "禁用插件",
+        "DeletePlugins": "删除插件",
+        "Message": {
+          "EnablePluginsSuccess": "启用插件'{0}'成功",
+          "EnablePluginsFailed": "启用插件'{0}'失败",
+          "DisablePluginsSuccess": "禁用插件'{0}'成功",
+          "DisablePluginsFailed": "禁用插件'{0}'失败",
+          "DeletePluginsSuccess": "删除插件'{0}'成功",
+          "DeletePluginsFailed": "删除插件'{0}'失败"
         }
       },
       "AvaliablePlugin": {
@@ -136,20 +140,20 @@
       },
       "PluginRepository": {
         "Title": "插件仓库",
-        "AddRepo":"添加仓库",
-        "RepoUrl":"存储库 URL",
-        "RepoUrlHint":"您要添加的存储库清单的位置",
-        "RepoName":"存储库名称",
-        "RepoNameHint":"一个自定义名称，用于区分该存储库和添加到服务器的任何其他存储库",
-        "Message":{
-          "AddRepoSuccess":"添加存储库'{0}'成功",
-          "AddRepoFailed":"添加存储库'{0}'失败",
-          "DeleteRepoSuccess":"删除存储库'{0}'成功",
-          "DeleteRepoFailed":"删除存储库'{0}'失败",
-          "EnableRepoSuccess":"启用存储库'{0}'成功",
-          "EnableRepoFailed":"启用存储库'{0}'失败",
-          "DisableRepoSuccess":"禁用存储库'{0}'成功",
-          "DisableRepoFailed":"禁用存储库'{0}'失败"
+        "AddRepo": "添加仓库",
+        "RepoUrl": "存储库 URL",
+        "RepoUrlHint": "您要添加的存储库清单的位置",
+        "RepoName": "存储库名称",
+        "RepoNameHint": "一个自定义名称，用于区分该存储库和添加到服务器的任何其他存储库",
+        "Message": {
+          "AddRepoSuccess": "添加存储库'{0}'成功",
+          "AddRepoFailed": "添加存储库'{0}'失败",
+          "DeleteRepoSuccess": "删除存储库'{0}'成功",
+          "DeleteRepoFailed": "删除存储库'{0}'失败",
+          "EnableRepoSuccess": "启用存储库'{0}'成功",
+          "EnableRepoFailed": "启用存储库'{0}'失败",
+          "DisableRepoSuccess": "禁用存储库'{0}'成功",
+          "DisableRepoFailed": "禁用存储库'{0}'失败"
         }
       }
     }
