--- a/src/AVOne.Server/wwwroot/i18n/en-US.json
+++ b/src/AVOne.Server/wwwroot/i18n/en-US.json
@@ -34,6 +34,7 @@
       "OrignalLink": "Orignal Link"
     },
     "Tasks": {
+      "Title": "Download Task",
       "AddTask": "Add Download Task",
       "AddTaskUrl": "Add Download Task Url",
       "AddTaskThreadCount": "Download Task Thread Count",
@@ -103,6 +104,17 @@
       },
       "Provider": {
         "Title": "Provider Settings"
+      },
+      "Proxy": {
+        "Title": "Proxy Setting",
+        "Default": {
+          "Title": "Default Proxy",
+          "PlaceHolder": "Eg. http://127.0.0.1"
+        },
+        "Download": {
+          "Title": "Proxy For Downloader",
+          "PlaceHolder": "Eg. http://127.0.0.1"
+        }
       }
     },
     "Library": {
