--- a/src/Lang/Lang.zh-CN.json
+++ b/src/Lang/Lang.zh-CN.json
@@ -4,6 +4,7 @@
   "PATH_NOT_EXIST": "文件 '{0}' 不存在.",
   "DIR_NOT_EXIST": "文件夹 '{0}' 不存在.",
   "SKIP_METADATA_NOT_EXIST": "由于无法获取元数据,跳过文件 '{0}'.",
+  "SKIP_METADATA_NOT_VALID": "无法正确识别元数据,跳过文件 '{0}'.",
   "SKIP_FILE_DUE_TO_TARGET_FILE_AREADY_EXIST": "由于目标路径'{1}'已存在,跳过文件 '{0}'.",
   "INVALID_DOWNLOADABLE_ITEM": "非法的下载目标.",
   "PLUGIN_NOT_EXIST": "插件 '{0}' 不存在.",
@@ -16,7 +17,7 @@
   "Moving file successfully": "成功将文件 {0} 移动至 {1}",
   "Downloading Remote Image": "正在为文件 '{0}'下载图片",
   "Not a movie": "'{0}' 不是一个视频文件.",
-  "Can't find metadata": "无法为 '{0}'找到元数据.",
+  "Can't find metadata": "无法为 '{0}'获取元数据.",
   "Can not find extractor for web url": "无法为 '{0}' 获得可用的提取器.",
   "Can not find any media for web url": "无法为 '{0}' 获得可下载的视频.",
   "Choose a media to download": "选择需要下载的视频",
