--- a/src/Lang/Lang.zh-CN.json
+++ b/src/Lang/Lang.zh-CN.json
@@ -15,6 +15,7 @@
   "Moving file": "移动文件 {0} ...",
   "Saving metadata": "为 {0} 保存元数据 ...",
   "Moving file successfully": "成功将文件 {0} 移动至 {1}",
+  "Moving additional part successfully": "成功将附带内容文件 {0} 移动至 {1}",
   "Downloading Remote Image": "正在为文件 '{0}'下载图片",
   "Not a movie": "'{0}' 不是一个视频文件.",
   "Can't find metadata": "无法为 '{0}'获取元数据.",
