--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -45,6 +45,7 @@
     "Tasks": {
       "Title": "下载任务",
       "AddTask": "添加下载任务",
+      "DownloadItemIndex":"下载内容",
       "AddTaskThreadCount": "最大线程数",
       "AddTaskRetryCount": "重试次数",
       "AddTaskUrl": "下载任务链接",
