--- a/src/AVOne.Server/wwwroot/i18n/en-US.json
+++ b/src/AVOne.Server/wwwroot/i18n/en-US.json
@@ -7,6 +7,8 @@
     "SaveChanges": "Save changes",
     "Reset": "Reset",
     "Submit": "Submit",
+    "Prev": "Prev",
+    "Next": "Next",
     "On": "On",
     "Off": "Off"
   },
@@ -37,9 +39,13 @@
       "Title": "Download Task",
       "AddTask": "Add Download Task",
       "AddTaskUrl": "Add Download Task Url",
-      "DownloadItemIndex":"Download Content",
+      "AddTaskDownloadItemIndex":"Download Content",
+      "AddTaskDownloadTarget":"Download Folder",
+      "AddTaskPreferName":"File Name",
+      "MetaDataSearchName":"Search Name",
       "AddTaskThreadCount": "Download Task Thread Count",
       "AddTaskRetryCount": "Download Task Retry Count",
+      "AutoSaveMetaData": "Save Meta Data automatically",
       "AddTaskUrlHint": "For example :https://missav.com/fr/cus-1468",
       "DeleteTask": "Delete Download Task",
       "StopTask": "Stop Download Task",
