--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -7,6 +7,8 @@
   "Common": {
     "SaveChanges": "保存变更",
     "Reset": "重置",
+    "Prev": "上一步",
+    "Next": "下一步",
     "Cancel": "取消",
     "Submit": "提交",
     "Disabled":"已禁用",
@@ -49,6 +51,11 @@
       "AddTaskThreadCount": "最大线程数",
       "AddTaskRetryCount": "重试次数",
       "AddTaskUrl": "下载任务链接",
+      "AutoSaveMetaData": "自动保存元数据",
+      "MetaDataSearchName":"搜索名称",
+      "AddTaskDownloadItemIndex":"下载内容",
+      "AddTaskDownloadTarget":"下载路径",
+      "AddTaskPreferName":"文件名",
       "AddTaskUrlHint": "例如:https://missav.com/fr/cus-1468",
       "DeleteTask": "删除下载任务",
       "StopTask": "停止下载任务",
