--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -53,6 +53,9 @@
       "AddTaskUrl": "下载任务链接",
       "AutoSaveMetaData": "自动保存元数据",
       "MetaDataSearchName":"搜索名称",
+      "MetaDataProvider":"元数据搜索器",
+      "PreferName":"文件名",
+      "SaveMetaDataAfterDownload":"下载后保存元数据",
       "AddTaskDownloadItemIndex":"下载内容",
       "AddTaskDownloadTarget":"下载路径",
       "AddTaskPreferName":"文件名",
@@ -60,6 +63,7 @@
       "DeleteTask": "删除下载任务",
       "StopTask": "停止下载任务",
       "ViewDetail": "查看任务详情",
+      "SearchingMetaData":"正在搜索'{0}'元数据",
       "Failed": "下载失败",
       "ExtractingMedia": "正在从'{0}'提取媒体信息",
       "AdvancedOption": "高级选项",
@@ -67,12 +71,14 @@
         "AddTaskSuccess": "添加下载任务'{0}'成功",
         "AddTaskFailed": "添加下载任务'{0}'失败,原因'{1}'",
         "DeleteTaskSuccess": "删除下载任务'{0}'成功",
-        "DeleteTaskFailed": "删除下载任务'{0}'失败"
+        "DeleteTaskFailed": "删除下载任务'{0}'失败",
+        "FileHasBeenMovedOrRemoved": "文件已被移动或删除"
       },
       "FailedReason": {
         "NoExtrator": "未找到适用于 '{0}' 的提取器",
         "NoDownloader": "未找到适用于'{0}' 的下载器",
-        "GetDownloadItemFailed": "无法从'{0}'中提取可下载的媒体"
+        "GetDownloadItemFailed": "无法从'{0}'中提取可下载的媒体",
+        "CannotCreateDir" : "无法创建目录'{0}'"
       }
     },
     "Tags": {
