Allow download metadata directly from website

--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -47,26 +47,29 @@
     "Tasks": {
       "Title": "下载任务",
       "AddTask": "添加下载任务",
-      "DownloadItemIndex":"下载内容",
+      "DownloadItemIndex": "下载内容",
       "AddTaskThreadCount": "最大线程数",
       "AddTaskRetryCount": "重试次数",
       "AddTaskUrl": "下载任务链接",
       "AutoSaveMetaData": "自动保存元数据",
-      "MetaDataSearchName":"搜索名称",
-      "MetaDataProvider":"元数据搜索器",
-      "PreferName":"文件名",
-      "SaveMetaDataAfterDownload":"下载后保存元数据",
-      "AddTaskDownloadItemIndex":"下载内容",
-      "AddTaskDownloadTarget":"下载路径",
-      "AddTaskPreferName":"文件名",
+      "MetaDataSearchName": "搜索名称",
+      "MetaDataProvider": "元数据搜索器",
+      "PreferName": "文件名",
+      "SaveMetaDataAfterDownload": "下载后保存元数据",
+      "AddTaskDownloadItemIndex": "下载内容",
+      "AddTaskDownloadTarget": "下载路径",
+      "AddTaskPreferName": "文件名",
       "AddTaskUrlHint": "例如:https://missav.com/fr/cus-1468",
       "DeleteTask": "删除下载任务",
       "StopTask": "停止下载任务",
       "ViewDetail": "查看任务详情",
-      "SearchingMetaData":"正在搜索'{0}'元数据",
+      "SearchingMetaData": "正在搜索'{0}'元数据",
       "Failed": "下载失败",
       "ExtractingMedia": "正在从'{0}'提取媒体信息",
       "AdvancedOption": "高级选项",
+      "UseMetaDataFromDownloadItem": "使用视频网页中提取的元数据",
+      "AutoDetect": "智能识别番号",
+      "SearchingMetaDataFailed": "未能找到元数据",
       "Message": {
         "AddTaskSuccess": "添加下载任务'{0}'成功",
         "AddTaskFailed": "添加下载任务'{0}'失败,原因'{1}'",
@@ -78,7 +81,7 @@
         "NoExtrator": "未找到适用于 '{0}' 的提取器",
         "NoDownloader": "未找到适用于'{0}' 的下载器",
         "GetDownloadItemFailed": "无法从'{0}'中提取可下载的媒体",
-        "CannotCreateDir" : "无法创建目录'{0}'"
+        "CannotCreateDir": "无法创建目录'{0}'"
       }
     },
     "Tags": {
