--- a/src/AVOne.Server/wwwroot/i18n/en-US.json
+++ b/src/AVOne.Server/wwwroot/i18n/en-US.json
@@ -39,13 +39,13 @@
       "Title": "Download Task",
       "AddTask": "Add Download Task",
       "AddTaskUrl": "Add Download Task Url",
-      "AddTaskDownloadItemIndex":"Download Content",
-      "AddTaskDownloadTarget":"Download Folder",
-      "AddTaskPreferName":"File Name",
-      "MetaDataSearchName":"Search Name",
-      "PreferName":"File Name",
-      "MetaDataProvider":"Meta Data Provider",
-      "SaveMetaDataAfterDownload":"Save Meta Data After Download",
+      "AddTaskDownloadItemIndex": "Download Content",
+      "AddTaskDownloadTarget": "Download Folder",
+      "AddTaskPreferName": "File Name",
+      "MetaDataSearchName": "Search Name",
+      "PreferName": "File Name",
+      "MetaDataProvider": "Meta Data Provider",
+      "SaveMetaDataAfterDownload": "Save Meta Data After Download",
       "AddTaskThreadCount": "Download Task Thread Count",
       "AddTaskRetryCount": "Download Task Retry Count",
       "AutoSaveMetaData": "Save Meta Data automatically",
@@ -57,6 +57,9 @@
       "Failed": "Download Failed",
       "AdvancedOption": "Advanced Option",
       "ExtractingMedia": "Extracting Media from '{0}'",
+      "UseMetaDataFromDownloadItem": "Use metadata from the download website",
+      "AutoDetect": "Auto Detect Jav Movie Id By Name",
+      "SearchingMetaDataFailed": "Failed to search metadata",
       "Message": {
         "AddTaskSuccess": "Add download task '{0}' success",
         "AddTaskFailed": "Add download task '{0}' failed due to '{1}'",
@@ -68,7 +71,7 @@
         "NoExtrator": "No extrator for url '{0}'",
         "NoDownloader": "No downloader for url '{0}'",
         "GetDownloadItemFailed": "Can't get download item for url '{0}'",
-        "CannotCreateDir" : "Cannot create directory '{0}'"
+        "CannotCreateDir": "Cannot create directory '{0}'"
       }
     },
     "Status": {
