添加了插件安装功能

--- a/src/AVOne.Server/wwwroot/i18n/en-US.json
+++ b/src/AVOne.Server/wwwroot/i18n/en-US.json
@@ -154,7 +154,11 @@
         }
       },
       "AvaliablePlugin": {
-        "Title": "Avaliable Plugins"
+        "Title": "Avaliable Plugins",
+        "InstallPlugins": "Install Plugin",
+        "SelectedPluginVersions": "Select versions",
+        "Install": "Install",
+        "Installed": "Installed"
       },
       "PluginRepository": {
         "Title": "Plugin Repository",
