修复docker中国际化错误 添加日志

--- a/src/AVOne.Server/wwwroot/i18n/en-US.json
+++ b/src/AVOne.Server/wwwroot/i18n/en-US.json
@@ -180,5 +180,12 @@
         }
       }
     }
+  },
+  "System": {
+    "Title": "Advanced",
+    "Log": {
+      "Title": "Log"
+    }
   }
+  
 }
